--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -76,7 +76,7 @@
   "nav":{
     "title":"Nav Bar",
     "title-1":"Services",
-    "title-2":"About Us",
+    "title-2":"Us",
     "title-3":"Our Experience",
     "title-4":"Virtual Office"
   },
